unpackaged/main/default/objects/Accounting_Action__c/Accounting_Action__c.object-meta.xml
<CustomObject>
    <label>Accounting Action</label>
    <nameField>
        <displayFormat>Action-{000000}</displayFormat>
        <label>Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>