unpackaged/main/default/objects/Accounting_Action__c/fields/ACH_Date__c.field-meta.xml
<CustomField>
    <fullName>ACH_Date__c</fullName>
    <label>ACH Date</label>
    <type>Date</type>
</CustomField>