unpackaged/main/default/objects/Accounting_Action__c/fields/Actg_Complete__c.field-meta.xml
<CustomField>
    <fullName>Actg_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actg Complete</label>
    <type>Checkbox</type>
</CustomField>