unpackaged/main/default/objects/Accounting_Action__c/fields/Bank_Change_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_Change_Effective_Date__c</fullName>
    <label>Bank Change Effective Date</label>
    <type>Date</type>
</CustomField>