unpackaged/main/default/objects/Accounting_Action__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <formula>HYPERLINK("/flow/Accounting_Actions_set_to_Complete?inputCaseId=" + Accounting_Instructions__r.Case__c + "&amp;retURL=/00O2T0000075l9g", "Click Here", '_self')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete</label>
    <type>Text</type>
</CustomField>