unpackaged/main/default/objects/Accounting_Action__c/fields/Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number__c</fullName>
    <formula>Accounting_Instructions__r.Loan_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Number</label>
    <type>Text</type>
</CustomField>