unpackaged/main/default/objects/Accounting_Action__c/fields/Report_Label__c.field-meta.xml
<CustomField>
    <fullName>Report_Label__c</fullName>
    <description>Displays on the Accounting Actions Queue for report grouping</description>
    <formula>IF(
NOT(ISBLANK(Accounting_Instructions__r.Case__r.Multiple_Bounces__c)), 
Loan_Number__c &amp; " - " &amp; Accounting_Instructions__r.Legal_Name__c &amp; " [" &amp; Accounting_Instructions__r.Case__r.CaseNumber &amp; "]" &amp; BR() &amp; "Duplicate Bounces: " &amp; BR() &amp; Accounting_Instructions__r.Case__r.Multiple_Bounces__c,
Loan_Number__c &amp; " - " &amp; Accounting_Instructions__r.Legal_Name__c &amp; " [" &amp; Accounting_Instructions__r.Case__r.CaseNumber &amp; "]"
)</formula>
    <label>Loan</label>
    <type>Text</type>
</CustomField>