unpackaged/main/default/objects/Accounting_Action__c/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <label>Routing Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>